proyectoCRUD/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lvillanueva
  labels:
     tipo: dev
