proyectoCRUD/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app
  labels:
    estado: "1"
spec:
  selector:
    matchLabels:
      app: app
      tier: web
  replicas: 7
  template:
    metadata:
      labels:
        app: app
        tier: web
    spec:
      containers:
      - name: my-app
        image: 17240609/aplicacion:latest
        ports:
        - containerPort: 80
