proyectoCRUD/serviciobd.yaml
apiVersion: v1
kind: Service
metadata:
  name: gymservidor
  labels:
    app: luisbd
spec: 
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: luisbd
